[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/Settings.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/Credits.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/Statistics.tscn" type="PackedScene" id=3]
[ext_resource path="res://main/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://ui/purification-mainmenu.png" type="Texture" id=5]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
stretch_mode = 1

[node name="Title" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 25.0
margin_top = 20.0
margin_right = -30.0
margin_bottom = -50.0

[node name="TextureRect" type="TextureRect" parent="Title"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Title"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Forest Skirmish"
align = 1
valign = 1
uppercase = true

[node name="Buttons" type="Control" parent="."]
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 55.0
margin_right = 30.0
margin_bottom = -55.0

[node name="VBoxContainer" type="VBoxContainer" parent="Buttons"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Start" type="Button" parent="Buttons/VBoxContainer"]
margin_right = 370.0
margin_bottom = 28.0
size_flags_vertical = 3
text = "Start"

[node name="Continue" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 32.0
margin_right = 370.0
margin_bottom = 60.0
size_flags_vertical = 3
text = "Continue"

[node name="Settings" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 64.0
margin_right = 370.0
margin_bottom = 93.0
size_flags_vertical = 3
text = "Settings"

[node name="CreditsLegal" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 97.0
margin_right = 370.0
margin_bottom = 125.0
size_flags_vertical = 3
text = "Credits/Legal"

[node name="Stats" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 129.0
margin_right = 370.0
margin_bottom = 157.0
size_flags_vertical = 3
text = "Statistics"

[node name="Quit" type="Button" parent="Buttons/VBoxContainer"]
margin_top = 161.0
margin_right = 370.0
margin_bottom = 190.0
size_flags_vertical = 3
text = "Exit"

[node name="Settings" type="WindowDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 70.0
margin_right = -30.0
margin_bottom = -30.0

[node name="Settings" parent="Settings" instance=ExtResource( 1 )]

[node name="Credits" type="WindowDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 70.0
margin_right = -30.0
margin_bottom = -30.0

[node name="Credits" parent="Credits" instance=ExtResource( 2 )]

[node name="Statistics" type="WindowDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 70.0
margin_right = -30.0
margin_bottom = -30.0

[node name="Statistics" parent="Statistics" instance=ExtResource( 3 )]

[node name="SaveLoadError" type="AcceptDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 70.0
margin_right = -30.0
margin_bottom = -30.0

[node name="Label2" type="Label" parent="SaveLoadError"]
margin_right = 40.0
margin_bottom = 14.0

[connection signal="pressed" from="Buttons/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/CreditsLegal" to="." method="_on_CreditsLegal_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Stats" to="." method="_on_Stats_pressed"]
[connection signal="pressed" from="Buttons/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
